--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
             
         </article>
      </main>
-     <footer> Site Criando Por Alesson Santos</footer>
+     <footer> Site Criado Por Alesson Santos <a href="https://github.com/AlessonDsantos?tab=repositories" class="externo">Repositorio GitHub</a></footer>
 </body>
 </html>
