--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             
         </article>
      </main>
-     <footer> Site Criado Por Alesson Santos <a href="https://github.com/AlessonDsantos?tab=repositories" target="_blank" class="externo">Repositorio GitHub</a></footer>
+     <footer> 
+        <p>Site Criado Por Alesson Santos <a href="https://github.com/AlessonDsantos?tab=repositories" target="_blank" class="externo">Repositorio GitHub</a></p>
+    </footer>
 </body>
 </html>
